--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,6 +23,9 @@
     "host_permissions": [
       "http://*/*",
       "https://*/*"
-    ]
+    ],
+    "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self' https://cdnjs.cloudflare.com"
+    }
   }
   
